--- a/РГЗ-фронт2/РГЗ-фронт2/AuthWindow.xaml
+++ b/РГЗ-фронт2/РГЗ-фронт2/AuthWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="РГЗ_фронт.AuthWindow"
+﻿<Window x:Class="РГЗ_фронт2.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:РГЗ_фронт"
+        xmlns:local="clr-namespace:РГЗ_фронт2"
         mc:Ignorable="d"
         Title="AuthWindow" Height="450" Width="600"
         WindowStartupLocation="CenterOwner">
