--- a/РГЗ-фронт2/РГЗ-фронт2/MainWindow.xaml
+++ b/РГЗ-фронт2/РГЗ-фронт2/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="РГЗ_фронт.MainWindow"
+﻿<Window x:Class="РГЗ_фронт2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -68,13 +68,18 @@
                     <TextBox x:Name="Path" IsReadOnly="True"></TextBox>
                 </StackPanel>
                 <ListBox x:Name="ViewerDirectory" Style="{StaticResource DirectoryListBox}" SelectionChanged="ViewerDirectory_SelectionChanged" MouseDoubleClick="ViewerDirectory_MouseDoubleClick"/>
-                <Button Height="50" Click="GetPhotos_Click" Content="Получить картинки из папки">
+                <Button Height="50" Click="GetPhotos_Click" Content="Просмотреть изображения">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="25"/>
                         </Style>
                     </Button.Resources>
                 </Button>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Style="{StaticResource TexBlock}" Margin="20">Время:</TextBlock>
+                    <TextBox x:Name="Time" IsReadOnly="True" Width="100">0</TextBox>
+                </StackPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
                 <TextBlock Style="{StaticResource TitleH2}">Фотографии</TextBlock>
