--- a/РГЗ-фронт2/РГЗ-фронт2/App.xaml
+++ b/РГЗ-фронт2/РГЗ-фронт2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="РГЗ_фронт2.App"
+﻿<Application x:Class="РГЗ_фронт.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:РГЗ_фронт2"
+             xmlns:local="clr-namespace:РГЗ_фронт"
              StartupUri="MenuWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBlock" x:Key="TexBlock">
