--- a/РГЗ-фронт2/РГЗ-фронт2/Help.xaml
+++ b/РГЗ-фронт2/РГЗ-фронт2/Help.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="РГЗ_фронт2.Help"
+﻿<Window x:Class="РГЗ_фронт.Help"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
